fix(content): hide overflow on nuxt root container
Just a quickfix until I find the reason for the overflow.

SH-5

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,3 +45,8 @@
 @import 'buttons.css';
 @import 'utilities.css';
 @import 'prose.css';
+
+/* Nuxt Wrapper */
+#__nuxt {
+  overflow: hidden;
+}
